--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Este es el titulo atractivio e interesante del post</h1>
                 <p>Y este es el parrafo de inicio en el que vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, natus culpa. Corporis deleniti quos unde cupiditate impedit ratione assumenda perspiciatis quibusdam ad aut. Maiores exercitationem iure facere voluptate ipsam hic.</p>
             </div>
         </div>
     </body>
