--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tag-line">Tu blog de confianza</span>
+                <span id="tag-line">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivio e interesante del post</h1>
                 <p>Y este es el parrafo de inicio en el que vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, natus culpa. Corporis deleniti quos unde cupiditate impedit ratione assumenda perspiciatis quibusdam ad aut. Maiores exercitationem iure facere voluptate ipsam hic.</p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
