--- a/blogpost.html
+++ b/blogpost.html
@@ -6,8 +6,9 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog
-                <span id="tag-line">Tu blog de cabecera</span>
+                Hyperblog 
+                <span id="tag-line">Tu blog de cabecera 2.0</span>
+                <img src="./imagenes/cr7.jpg" alt="imagen de cr7" id="imagen">
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivio e interesante del post</h1>
