--- a/blogpost.html
+++ b/blogpost.html
@@ -16,5 +16,12 @@
                 <p>Suscribete y dale like</p>
             </div>
         </div>
+        <footer>
+            <div id="anita">
+                <div id="contenedor">
+                    <h6>Hecho con amor en Platzi</h6>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
