--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
                 <img src="./imagenes/cr7.jpg" alt="imagen de cr7" id="imagen">
             </div>
             <div id="post">
-                <h1>Este es el titulo atractivio e interesante del post</h1>
+                <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio en el que vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, natus culpa. Corporis deleniti quos unde cupiditate impedit ratione assumenda perspiciatis quibusdam ad aut. Maiores exercitationem iure facere voluptate ipsam hic.</p>
                 <p>Suscribete y dale like</p>
@@ -20,7 +20,7 @@
         <footer>
             <div id="anita">
                 <div id="contenedor">
-                    <h6>Hecho con amor en Platzi</h6>
+                    <h6>Hecho con amor en Platzi.</h6>
                 </div>
             </div>
         </footer>
