Cambio a entidades en vez de tildes

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,8 +11,8 @@
                 <img src="./imagenes/cr7.jpg" alt="imagen de cr7" id="imagen">
             </div>
             <div id="post">
-                <h1>Este es el titulo atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio en el que vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
+                <p>Y este es el p&aacute;rrafo de inicio en el que vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, natus culpa. Corporis deleniti quos unde cupiditate impedit ratione assumenda perspiciatis quibusdam ad aut. Maiores exercitationem iure facere voluptate ipsam hic.</p>
                 <p>Suscribete y dale like</p>
             </div>
